fix: navbar icon alignment

--- a/apps/client/src/app/nav-bar/nav-bar.module.scss
+++ b/apps/client/src/app/nav-bar/nav-bar.module.scss
@@ -1,5 +1,6 @@
 .container {
   display: grid;
+  align-items: center;
   grid-template-columns: repeat(4, 1fr);
   width: 100vw;
   height: 3.2rem;
@@ -7,6 +8,6 @@
   img {
     justify-self: center;
     width: 5rem;
-    height: 3rem;
+    height: 2.5rem;
   }
 }
